Fix: align for Profile page (#382)

--- a/src/containers/Profile/Profile.pcss
+++ b/src/containers/Profile/Profile.pcss
@@ -83,14 +83,15 @@
       position: absolute;
       cursor: pointer;
       top: 0;
-      left: 0;
-      right: 0;
+      left: -15px;
+      right: 15px;
       bottom: 0;
       background-color:  var(--profile-slider);
       opacity: 0.38;
       transition: .4s;
       border-radius: calc(var(--gap) * 5.66);
       height: calc(var(--gap) * 2);
+      margin-top: calc(var(--big-gap) / 5);
     }
     .slider:before {
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 0px 2px rgba(0, 0, 0, 0.14);
@@ -132,6 +133,9 @@
     margin-top: calc(var(--gap) * 2);
     width: 100%;
     justify-content: space-between;
+    .pg-profile-page__btn-secondary-change {
+      margin: calc(var(--big-gap) / 3) calc(var(--big-gap) / 3) 0 0
+    }
 
     label {
       align-self: center;
