--- a/src/containers/ReferralProgram/ReferralProgram.pcss
+++ b/src/containers/ReferralProgram/ReferralProgram.pcss
@@ -6,7 +6,7 @@
         border: 1px solid var(--base-2);
         flex-grow: 1;
         padding: 0;
-        margin: calc(var(--gap) * 2);
+        margin: calc(var(--gap) * 2) calc(var(--gap) * 2.8) calc(var(--gap) * 2) calc(var(--gap) * 4);
         overflow: hidden;
 
         &:focus-within {
